--- a/index.html
+++ b/index.html
@@ -9,53 +9,53 @@
 </head>
 <body>
   <div class="calendar">
-    <div class="monthbox">
-      <ul class="month">
-        <li class="prev-month"><i class="fa fa-angle-left fa-lg" aria-hidden="true"></i></li>
+    <div class="month">
+      <ul class="month__header">
+        <li class="month__header--prev-month-switch"><i class="fa fa-angle-left fa-lg" aria-hidden="true"></i></li>
         <!-- Need to double-check if we really need this "aria-hidden=true" thing -->
         <li>June 2014</li>
-        <li class="next-month"><i class="fa fa-angle-right fa-lg" aria-hidden="true"></i></li>
+        <li class="month__header--next-month-switch"><i class="fa fa-angle-right fa-lg" aria-hidden="true"></i></li>
       </ul>
-      <ul class="monthdays">
-        <li class="prev-month-day">29</li>
-        <li class="prev-month-day">30</li>
-        <li class="curr-month-day">1</li>
-        <li class="curr-month-day">2</li>
-        <li class="curr-month-day">3</li>
-        <li class="curr-month-day">4</li>
-        <li class="curr-month-day">5</li>
-        <li class="curr-month-day">6</li>
-        <li class="curr-month-day">7</li>
-        <li class="curr-month-day">8</li>
-        <li class="curr-month-day today">9</li>
-        <li class="curr-month-day">10</li>
-        <li class="curr-month-day">11</li>
-        <li class="curr-month-day">12</li>
-        <li class="curr-month-day">13</li>
-        <li class="curr-month-day">14</li>
-        <li class="curr-month-day">15</li>
-        <li class="curr-month-day">16</li>
-        <li class="curr-month-day">17</li>
-        <li class="curr-month-day">18</li>
-        <li class="curr-month-day event">19</li>
-        <li class="curr-month-day">20</li>
-        <li class="curr-month-day">21</li>
-        <li class="curr-month-day">22</li>
-        <li class="curr-month-day">23</li>
-        <li class="curr-month-day">24</li>
-        <li class="curr-month-day">25</li>
-        <li class="curr-month-day">26</li>
-        <li class="curr-month-day">27</li>
-        <li class="curr-month-day">28</li>
-        <li class="curr-month-day">29</li>
-        <li class="curr-month-day">30</li>
-        <li class="curr-month-day">31</li>
-        <li class="next-month-day">1</li>
-        <li class="next-month-day">2</li>
+      <ul class="month__days">
+        <li class="month__days--prev-month">29</li>
+        <li class="month__days--prev-month">30</li>
+        <li class="month__days--curr-month">1</li>
+        <li class="month__days--curr-month">2</li>
+        <li class="month__days--curr-month">3</li>
+        <li class="month__days--curr-month">4</li>
+        <li class="month__days--curr-month">5</li>
+        <li class="month__days--curr-month">6</li>
+        <li class="month__days--curr-month">7</li>
+        <li class="month__days--curr-month">8</li>
+        <li class="month__days--curr-month today">9</li>
+        <li class="month__days--curr-month">10</li>
+        <li class="month__days--curr-month">11</li>
+        <li class="month__days--curr-month">12</li>
+        <li class="month__days--curr-month">13</li>
+        <li class="month__days--curr-month">14</li>
+        <li class="month__days--curr-month">15</li>
+        <li class="month__days--curr-month">16</li>
+        <li class="month__days--curr-month">17</li>
+        <li class="month__days--curr-month">18</li>
+        <li class="month__days--curr-month event">19</li>
+        <li class="month__days--curr-month">20</li>
+        <li class="month__days--curr-month">21</li>
+        <li class="month__days--curr-month">22</li>
+        <li class="month__days--curr-month">23</li>
+        <li class="month__days--curr-month">24</li>
+        <li class="month__days--curr-month">25</li>
+        <li class="month__days--curr-month">26</li>
+        <li class="month__days--curr-month">27</li>
+        <li class="month__days--curr-month">28</li>
+        <li class="month__days--curr-month">29</li>
+        <li class="month__days--curr-month">30</li>
+        <li class="month__days--curr-month">31</li>
+        <li class="month__days--next-month">1</li>
+        <li class="month__days--next-month">2</li>
       </ul>
     </div>
-    <div class="weekbox">
-      <ul class="weekdays">
+    <div class="week">
+      <ul class="week__days">
         <li>Mo</li>
         <li>Tu</li>
         <li>We</li>
@@ -73,7 +73,7 @@
           var target = event.target;
           target.classList.add("today");
       }
-      var month = document.querySelector(".monthdays");
+      var month = document.querySelector(".month__days");
       month.addEventListener("click", markAsCurrentDay);
   </script>
 </body>
